--- a/Angular/src/app/pages/user/clienti/tabellacontatti/tabellacontatti.component.html
+++ b/Angular/src/app/pages/user/clienti/tabellacontatti/tabellacontatti.component.html
@@ -62,7 +62,10 @@
           class="modern-filter"
         />
 
-        <p-button label="Cancella" (onClick)="clearFilter()" class="clear-button" />
+        <button type="button" class="clear-button" (click)="clearFilter()">
+        <i class="material-icons">filter_alt_off</i>
+        Resetta Filtri
+        </button>
       </div>
     </div>
     
