--- a/Angular/src/app/sidebar/sidebar.component.html
+++ b/Angular/src/app/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
     
     <!-- Main Menu Section -->
     <div class="nav-section">
-      <div class="nav-section-title">Menu</div>
+      <div class="nav-section-title">Menù Navigazione</div>
       
       <ng-container *ngFor="let menuItem of menuItems">
         <!-- Enabled menu item -->
